# NeuroDrugAI-Journey

./: .gitignore  Graph-Protocol  Molecular-Protocol  README.md  Untitled-1  conv3d_visualization.py  conv_matrix_visualization.py  ecfp_visualization.py  gaussian_blur_visualization.py  main.py  molecular_analysis.py  molecular_featurization.py  neuro.md  neuro2.md  pyproject.toml  rag_system.py  receptive_field_visualization.py  requirements.txt  smiles_breakdown.py  smiles_hydrogens.py  smiles_tutorial.py
code-examples/deepchem-tutorials/: An_Introduction_To_MoleculeNet.ipynb
dimensional-space-animation/: package-lock.json  package.json
dimensional-space-animation/dimensional-space-animation/: package-lock.json  package.json
dimensional-space-animation/dimensional-space-animation/src/: App.tsx
dimensional-space-animation/dimensional-space-animation/src/components/: DimensionalSpaceAnimation.tsx
dimensional-space-animation/src/components/: DimensionalSpaceAnimation.tsx
featurization_plots/: feature_dimensions.txt
learning-notes/: cnn_local_global_features.md  cnn_pooling_layers.md  cnn_vs_graph_visual_comparison.md  coulomb_matrix.md  graph_convolutions.md  graph_node_information_flow.md  graph_nodes_cnn_neurons.md  molecular_featurization.md  smiles_notation.md  smiles_tokenization.md
model-context-protocols/: code-implementation-protocol.md  concept-learning-protocol.md
rag-system/: file_mapping.json
