[project]
name = "neurodrugai-journey"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chembl-webresource-client>=0.10.9",
    "deepchem>=2.8.0",
    "ipykernel>=6.29.5",
    "jax>=0.5.3",
    "jupyter>=1.1.1",
    "lightning>=2.5.1",
    "matplotlib>=3.10.1",
    "openai>=1.70.0",
    "optax>=0.2.4",
    "python-dotenv>=1.1.0",
    "rdkit>=2024.9.6",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "tensorflow>=2.19.0",
    "tensorflow-metal>=1.2.0",
    "torch>=2.6.0",
    "torch-geometric>=2.6.1",
    "transformers>=4.50.3",
]
